# decycle

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  lib.rs
.github/workflows/: ci.yml
decycle-impl/: Cargo.toml
decycle-impl/src/: finalize.rs  helper.rs  lib.rs  process_module.rs  process_trait.rs
macro/: Cargo.toml  finalize.rs  lib.rs  process_module.rs  process_trait.rs
macro/src/: finalize.rs  lib.rs  process_module.rs  process_trait.rs
tests/: advanced_cycles.rs  also_rank_projection.rs  bareparam_reentry.rs  bug2.rs  bug3.rs  bug4.rs  bug5.rs  bug6.rs  coinduction_integration_test.rs  complex.rs  complex_coinduction.rs  complex_cycles.rs  dyn_stream_reentry.rs  hrtb_reentry.rs  legacy_fixes.rs  min_calculator.rs  more_cycles.rs  reentry_bridge.rs  span_tying_reentry.rs  trybuild.rs  unbounded_reentry.rs
tests/alsorank_bridge/: Cargo.toml  lib.rs
tests/traitdef/: Cargo.toml  lib.rs
tests/typedef/: Cargo.toml  lib.rs
tests/ui/: assoc_type_box_self.rs  assoc_type_box_self.stderr  assoc_type_self.rs  assoc_type_self.stderr  bad_bounds.rs  bad_bounds.stderr  decycle_supertrait.rs  decycle_supertrait.stderr  fn_sugar_bound.rs  fn_sugar_bound.stderr  module_args.rs  module_args.stderr  nested_module.rs  nested_module.stderr  recurse_level_zero.rs  recurse_level_zero.stderr  reentry_impl_trait_return.rs  reentry_impl_trait_return.stderr  super_super_path.rs  super_super_path.stderr  trait_alias.rs  trait_alias.stderr  trait_args.rs  trait_args.stderr  unsupported_impl_item.rs  unsupported_impl_item.stderr  use_outside.rs  use_outside.stderr
tests/ui/pass/: reentry_impl_trait_return_bounded.rs
