[package]
name = "decycle"
version = "0.2.0"
edition = "2021"
description = "Solve circular trait obligation"
license = "MIT"
repository = "https://github.com/yasuo-ozu/decycle"
keywords = ["macro", "trait", "recursive", "circular", "obligation"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
authors = ["yasuo-ozu"]

[lib]
path = "lib.rs"

[dependencies]
decycle-macro = { path = "macro", version = "0.2.0" }
decycle-impl = { path = "decycle-impl", version = "0.2.0" }

[dev-dependencies]
traitdef = { path = "tests/traitdef" }
typedef = { path = "tests/typedef" }
trybuild = "1.0"

[workspace]
members = ["decycle-impl", "macro", "tests/traitdef", "tests/typedef"]
resolver = "2"
