[package]
name = "decycle"
version = "0.4.0"
edition = "2021"
rust-version = "1.87"
description = "Solve circular trait obligation"
license = "MIT"
repository = "https://github.com/yasuo-ozu/decycle"
keywords = ["macro", "trait", "recursive", "circular", "obligation"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
authors = ["yasuo-ozu"]
exclude = ["docs/"]

[lib]
path = "lib.rs"

[dependencies]
decycle-macro = { path = "macro", version = "0.4.0" }
decycle-impl = { path = "decycle-impl", version = "0.4.0", default-features = false }

[features]
# `process_trait` (the `#[decycle]`-on-a-trait attribute) needs type-leak; the programmatic
# `finalize` bridge (see `finalize` module docs) does not. Default-on for drop-in compatibility;
# a `finalize`-only consumer (e.g. syan's `#[recurse]`) sets `default-features = false` to shed
# the type-leak dependency (and its MSRV floor — see D2 in the decycle bridge spec).
default = ["type-leak"]
type-leak = ["decycle-impl/type-leak"]

[dev-dependencies]
traitdef = { path = "tests/traitdef" }
typedef = { path = "tests/typedef" }
alsorank_bridge = { path = "tests/alsorank_bridge" }
trybuild = "1.0"

[workspace]
members = ["decycle-impl", "macro", "tests/traitdef", "tests/typedef", "tests/alsorank_bridge"]
resolver = "2"
