[package]
name = "decycle-impl"
version = "0.4.0"
edition = "2021"
rust-version = "1.71"
description = "Internal implementation for decycle macros"
license = "MIT"
repository = "https://github.com/yasuo-ozu/decycle"
keywords = ["macro", "trait", "recursive", "circular", "obligation"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
authors = ["yasuo-ozu"]

[lib]
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = { version = "1.0", default-features = false }
# type-leak 0.7 (safegraph-backed, MSRV 1.56) replaces 0.6 (gotgraph-backed, empirical
# MSRV 1.87) — this is the sole reason the default-feature build's floor dropped. Optional:
# a `finalize`-only consumer (`default-features = false`) sheds it entirely.
type-leak = { version = "0.7.0", optional = true }
template-quote = "0.4.0"

[dependencies.syn]
version = "2.0"
features = ["full", "derive", "printing", "extra-traits", "visit", "visit-mut"]

[features]
# `process_trait` (the `#[decycle]`-on-a-trait attribute) interns paths via type-leak; the
# programmatic `finalize` entry (the bridge a wrapper macro crate like syan's `#[recurse]`
# uses) does not. Default keeps the attribute working; a `finalize`-only consumer sets
# `default-features = false`.
default = ["type-leak"]
type-leak = ["dep:type-leak"]
